complete student witOut Chat (sorryMen)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="test">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
+    <string name="test2"> حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
     <string name="app_name">awesomeApp</string>
     <string name="action_settings">Settings</string>
     <string name="emptyListMessage">خالی !!!</string>
     <string name="terms">شرایط و ضوابط</string>
     <string name="acceptTerms">شرایط و ضوابط را می پذیرم</string>
-    <string name="phoneInfo">از شماره همراه جهت تشخیص حویت و پیگرد های قانونی استفاده می شود</string>
+    <string name="phoneInfo">از شماره همراه جهت تشخیص هویت و پیگرد های قانونی استفاده می شود</string>
    <!--DialogEyeLevel-->
     <string name="allEyeLevel">نمایش برای همه</string>
     <string name="friendEyeLevel">نمایش فقط برای دوستان</string>
